--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 %% \usepackage{sdrt}
+\usepackage{amsmath}
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{gb4e}
