--- a/ig.tex
+++ b/ig.tex
@@ -1,4 +1,4 @@
-\subsection{Interaction Grammars}
+\section{Interaction Grammars}
 
 We will briefly discuss one more grammar formalism and that is the
 formalism of Interaction Grammars \cite{guillaume2009interaction}.
@@ -156,18 +156,18 @@ superposing the EPTDs of $la$ and $voit$ by merging the nodes (1,2) and
     (2,4), respectively.}
 \end{figure}
 
-\subsubsection{Frigram, an interaction grammar}
-\label{sssec:frigram}
+\subsection{Frigram, an interaction grammar}
+\label{ssec:frigram}
 
 The reason we are interested in interaction grammars is because of the
 existence of Frigram, a large scale grammar of French which is
 lexicalized by Frilex, an independent lexical resource that we will be
 building our grammar on as well. Furthermore, as we will see
-in~\ref{sssec:link-ig-acg}, interaction grammars are closely linked with
+in~\ref{ssec:link-ig-acg}, interaction grammars are closely linked with
 abstract categorial grammars, which makes Frigram a suitable grammar to
 use as a guide when developing our grammar.
 
-In this section, we will introduce the metagrammatical structure of
+In this chapter, we will introduce the metagrammatical structure of
 Frigram and talk about how it uses the formalism of interaction grammars
 to solve several tricky linguistic phenomena.
 
@@ -295,8 +295,8 @@ top node must be an ancestor to the bottom node, but also that any
 intermediate nodes between the ancestor and successor must match the
 ancestor's features.
 
-\subsubsection{The link with abstract categorial grammars}
-\label{sssec:link-ig-acg}
+\subsection{The link with abstract categorial grammars}
+\label{ssec:link-ig-acg}
 
 Both abstract categorial grammars and interaction grammars, having come
 out of the same research team, are both closely related to linear
