--- a/motivation.tex
+++ b/motivation.tex
@@ -1,4 +1,4 @@
-\subsection{Motivation}
+\section{Motivation}
 
 To develop applications capable of understanding natural language, we
 have to analyze the discourse as a complex structure. The structure of
